set up outline for remaining analysis

--- a/BikeShareAnalysis.Rmd
+++ b/BikeShareAnalysis.Rmd
@@ -79,7 +79,7 @@ train <- mutate(train,
 
 ```
 
-Data only shows a single heavy weather point. In the midst of several light weather points. Is this data set valuable for the DC area? This should be explored further. For graphing purposes, replace with light weather. Implicit assumption: bike rentals during heavy weather will be negligeable. 
+Data only shows a single heavy weather point. In the midst of several light weather points. For graphing purposes, replace with light weather. Implicit assumption: bike rentals during heavy weather will be negligeable. 
 
 ```{r clean.heavyweather}
 print(which(train$weather == "heavy weather"))
@@ -90,6 +90,8 @@ print(train[which(train$weather == "heavy weather")+(-5):6,c("datetime","weather
 train$weather[train$weather == "heavy weather"] = "light weather"
 test$weather[test$weather == "heavy weather"] = "light weather"
 ```
+
+This should be explored further. Is this data set applicable to the DC area, since it essentially doesn't include heavy weather data which does occur in the DC area. 
 
 ## What is atemp?
 
@@ -107,7 +109,9 @@ windows()
 print(gg)
 ```
 
-This shows the effects of windchill below about 15°C and humidity above about 24°C. Note the outliers to the lower right of the main grouping. These `r nrow(filter(train, atemp < 15, temp > 24))` data all occur on a single day in august.
+This shows the effects of windchill below about 15°C and humidity above about 24°C. Note the data contains few points below 5°C, which could be an issue for the DC area. 
+
+Also note the outliers to the lower right of the main grouping. These `r nrow(filter(train, atemp < 15, temp > 24))` data all occur on a single day in august.
 Note the fixed atemp value of `r filter(train, atemp < 15, temp > 24)$atemp[1]`. For simplicity, assume for these values atemp = temp.
 
 ```{r atemp.outliers}
@@ -118,11 +122,13 @@ train <- mutate(train, atemp=ifelse((atemp < 15) & (temp > 24), temp, atemp))
 test <- mutate(test, atemp=ifelse((atemp < 15) & (temp > 24), temp, atemp))
 ```
 
-For a first-pass solution, it would appear the wind and humidity are already packaged into the 'feels like' tempurature value. The following analysis neglects temp, wind, and humidity in favor of using atemp. This leaves the weather label, time (hour of the day, day of the week), and holiday label. 
+It appears wind and humidity are already packaged into the 'feels like' tempurature value. The following analysis neglects temp, wind, and humidity in favor of using atemp. This leaves the weather label, time (hour of the day, day of the week), and holiday label. 
 
-## Effect of Time of day, weather, and working/non-working days
+## Primary demand drivers
 
-The initial idea for this plot came from [this kaggle script post](https://www.kaggle.com/users/993/ben-hamner/bike-sharing-demand/bike-rentals-by-time-and-temperature) by Ben Hamner. 
+### Effect of Time of day, weather, and working/non-working days
+
+The below plot shows the effect of time, weather, and work/nonwork days on daily rental counts. The initial idea for this plot came from [this kaggle script post](https://www.kaggle.com/users/993/ben-hamner/bike-sharing-demand/bike-rentals-by-time-and-temperature) by Ben Hamner, which has been greatly expanded here. 
 
 ```{r demand.daily, fig.width=8, fig.height=6}
 colors.tempurature <- c("#5e4fa2", "#3288bd", "#66c2a5", "#abdda4", "#e6f598",
@@ -141,8 +147,34 @@ windows()
 print(gg)
 ```
 
+Features to note:
+
+* Sinusoidal shape of demand with respect to hour of the day.
+* Weather does not greatly effect the the shape of the demand curve with respect to time of day, just the magnitude and density. 
+* Weather does seem to effect the average temperature of the data.
+* Dependance on demand to atemp, with peak demand in the 80-100°F range. 
+* Distincly differing shape between a work and non-work day, with 
+* Peak demand occurs in the afternoon of a warm, nice-weather, work-day.
+
+### Principal component analysis (PCA)
+
+PCA Analysis here.
+
+## Model Development
+
+Using a staged model development approach which attempts to remove the effect of each variable in isolated steps. 
+
+### temperature model
+
+### Work vs. Nonwork day
+
+### Weather effect
+
+### Time of day (final model)
+
 ## Future Work
 
 Items remaining for future work:
 
 * Include measured tempurature, wind, and humidity in the analysis. 
+* Determine if data set is applicable to the DC weather patterns. Data appears to be from much more temperate climate which could greatly effect weather-based behavior. Theory: residents get accustomed to their "average" weather condition, adjusting outdoor activity accordingly. 
